--- a/lang/it.json
+++ b/lang/it.json
@@ -61,5 +61,11 @@
     "notify_registration": "Ciao, un admin ti ha appena registrato.\nAdesso puoi utilizzare tutte le mie funzionalità con il comando /menu",
 
     "check_bday_true": "\uD83C\uDF89 INFO \uD83C\uDF89\n\nOggi è un giorno speciale, tanti auguri {} per i tuoi {} anni! \uD83C\uDF89 \uD83C\uDF8A \uD83C\uDF7E \uD83E\uDD42",
-    "check_bday_add": "Il caro {} è stato aggiunto alla lista paste! \uD83C\uDF70"
+    "check_bday_add": "Il caro {} è stato aggiunto alla lista paste! \uD83C\uDF70",
+
+    "score_edit": "Da qui puoi modificare i punti di tutti i membri. Quando hai finito premi END",
+    "score_edit_end": "I punteggi sono stati aggiornati con successo! Per vederli usa /score",
+    "score_order": "\uD83C\uDFC1 CLASSIFICA AVIS {} \uD83C\uDFC1\n\n{}"
+
+
 }
